2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-structures.h: Remove unneeded include

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-getter.c (sj_metadata_getter_set_cdrom):
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	Move in 2 pieces of code from Rhythmbox (compile-time option
	of using totem-pl-parser for device checking, Solaris device
	work-around)

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.h:
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	* libjuicer/sj-metadata.h: Move the nautilus-burn assisted
	media type checking to a shared location

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release):
	* libjuicer/sj-metadata.c (sj_metadata_helper_scan_date):
	* libjuicer/sj-metadata.h: Move the date parsing to a common place

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums),
	(sj_metadata_musicbrainz_init), (sj_metadata_musicbrainz_finalize):
	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release),
	(mb_list_albums):
	* libjuicer/sj-metadata.c (sj_metadata_helper_scan_disc_number):
	* libjuicer/sj-metadata.h:
	* libjuicer/sj-structures.h:
	* tests/mb-test.c (release_type_to_id), (metadata_cb), (main):
	- Move code to parse album titles into disc numbers to a common
	location for both musicbrainz backends, and fix valgrind errors
	(g_match_info_fetch() doesn't like having the string change from
	 underneath it)
	- Add a way to override the DiscID used, using the
	  MUSICBRAINZ_FORCE_DISC_ID envvar (MB3)
	- Fix leak of the disc ID (MB3)
	- Fix empty strings when we want them NULL (MB3)
	- Fix invalid memory access when getting the release date (MB3)