@@ -1,5 +1,13 @@
 2008-09-04  Bastien Nocera  <hadess@hadess.net>
 
+	* libjuicer/sj-error.c:
+	* libjuicer/sj-error.h:
+	* libjuicer/sj-structures.c:
+	* libjuicer/sj-structures.h: Relicense those 4 files under
+	the LGPL, see #550481 for details
+
+2008-09-04  Bastien Nocera  <hadess@hadess.net>
+
 	* libjuicer/sj-structures.h: Remove unneeded include
 
 2008-09-04  Bastien Nocera  <hadess@hadess.net>
